# AppimgIgniter

./: .gitignore  README.md  rust-toolchain.toml
appimg-igniter/: .gitignore  Cargo.toml  README.md  build.rs
appimg-igniter/src/: main.rs
appimg-igniter/src/clib/: wrapper.h
appimg-igniter/src/modules/: mod.rs
appimg-igniter/src/modules/appimage/: detection.rs  integration.rs  metadata.rs  mod.rs
appimg-igniter/src/modules/logging/: logging.rs
appimg-igniter/src/test/: mod.rs
appimg-igniter/src/test/appimage_test/: metadata_test.rs  mod.rs
appimg-igniter/src/test/logging_test/: logging_test.rs
